<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_header_text">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="189dp"
                android:layout_height="152dp"
                android:layout_weight="1"
                android:id="@+id/profile_image_view"
                android:contentDescription="@string/profile_picture_description_text"
                app:srcCompat="@drawable/dart" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_button_text"
                android:layout_weight="1"
                android:layout_marginTop="50dp"
                android:id="@+id/change_button"
                android:onClick="onClickChange"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/name_edit_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:id="@+id/name_editview"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/email_edit_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:id="@+id/email_editview"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:hint="@string/phone_edit_hint"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:id="@+id/phone_editview"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_text" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_radio_text"
                android:layout_weight="1"
                android:id="@+id/female_radiobutton"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_radio_text"
                android:layout_weight="1"
                android:id="@+id/male_radiobutton"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="class"
            android:hint="@string/enter_a_biography"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:id="@+id/class_editview"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="major"
            android:hint="@string/your_location"
            android:inputType="text"
            android:minHeight="48dp"
            android:id="@+id/major_editview"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button_text"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:onClick="onClickSave"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button_text"
                android:layout_weight="1"
                android:onClick="onClickCancel"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>